--- a/ExportSonglist/ExportSonglist.csproj
+++ b/ExportSonglist/ExportSonglist.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QueenBee\QueenBeeParser\QueenBeeParser.csproj">
+      <Project>{eeff0e58-cd15-4d7b-945c-2c2f0584d43b}</Project>
+      <Name>QueenBeeParser</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
